<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_add_timer">Add timer</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_filter_timers">Filter</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_completed_timers">Show completed timers</string>
    <string name="action_show_paused_timers">Show paused timers</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_date">By date</string>
    <string name="action_sort_title">By title</string>
    <string name="app_name" translatable="false">Countdown Timer</string>
    <string name="app_version" translatable="false">1.0.7</string>
    <string name="channel_name">Reminders</string>
    <string name="count_down">Countdown</string>
    <string name="description_pause">Pause</string>
    <string name="dialog_msg_delete_timer">Timer will be permanently deleted.</string>
    <string name="dialog_title_confirm">Confirm action</string>
    <string name="error">Error occurred</string>
    <string name="error_date_time_earlier">Date and time must be earlier than the current moment</string>
    <string name="error_date_time_later">Date and time must be later than the current moment</string>
    <string name="error_deleting">Error deleting</string>
    <string name="error_loading">Error loading</string>
    <string name="error_saving">Error saving</string>
    <string name="error_title_empty">Please fill in this field</string>
    <string name="hint_title">Title</string>
    <string name="main_pref_app_version_title">Version</string>
    <string name="main_pref_category_about_app">About app</string>
    <string name="main_pref_category_notifications">Notifications</string>
    <string name="main_pref_category_reminders">Reminders</string>
    <string name="main_pref_notification_led">Led light</string>
    <string name="main_pref_notification_vibration">Vibration</string>
    <string name="main_pref_rate_app">Rate app</string>
    <string name="main_pref_reminder_trouble">Reminder troubleshooting</string>
    <string name="main_pref_reminders_enabled">Enable reminders</string>
    <string name="main_pref_ringtone">Ringtone</string>
    <string name="main_pref_theme">Theme</string>
    <string-array name="mode">
        <item>@string/mode_timer</item>
        <item>@string/mode_stopwatch</item>
    </string-array>
    <string name="mode_stopwatch">Stopwatch</string>
    <string name="mode_timer">Timer</string>
    <string name="msg_timer_completed">Timer completed</string>
    <string name="msg_timer_deleted">Timer deleted</string>
    <string name="msg_timer_saved">Timer saved</string>
    <string name="no_timers">No timers</string>
    <string name="ringtone_default">Default</string>
    <string name="step_1_description">App needs to run automatically in the background when the phone start up to send you reminders on time.</string>
    <string name="step_1_title">1. Check autostart settings</string>
    <string name="step_2_description">Notification settings may be disabled on your device. To fix this, enable notification sound in settings</string>
    <string name="step_2_title">2. Verify notification sound is enabled</string>
    <string name="step_3_description">Go to your phone battery settings and exclude app from any battery saving settings.</string>
    <string name="step_3_title">3. Adjust advanced battery settings</string>
    <string name="step_4_description">Closing app through the task manager might block reminders.</string>
    <string name="step_4_title">4. Don\'t force stop</string>
    <string name="suffix_day">d</string>
    <string name="suffix_month">mth</string>
    <string name="suffix_week">wk</string>
    <string name="suffix_year">y</string>
    <string name="theme_dark">Dark</string>
    <string-array name="theme_entries">
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
        <item>@string/theme_system</item>
    </string-array>
    <string name="theme_light">Light</string>
    <string name="theme_system">Follow system</string>
    <string name="disable_ads">Disable ads</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="purchases">Purchases</string>
    <string name="ads_disabled">Ads disabled</string>
    <string name="no_purchases_found">No purchases found</string>
    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
        <item>system</item>
    </string-array>
</resources>
