<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:entries="@array/theme_entries"
        app:defaultValue="system"
        app:entryValues="@array/theme_values"
        app:iconSpaceReserved="false"
        app:key="theme"
        app:summary="%s"
        app:title="@string/main_pref_theme"/>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Reminders">

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="reminders_enabled"
            app:title="@string/main_pref_reminders_enabled"/>

        <Preference
            app:iconSpaceReserved="false"
            app:key="reminder_trouble"
            app:title="@string/main_pref_reminder_trouble"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Notifications">

        <Preference
            app:iconSpaceReserved="false"
            app:key="notification_ringtone"
            app:title="@string/main_pref_ringtone"/>

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="notification_led"
            app:title="@string/main_pref_notification_led"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/main_pref_category_about_app">

        <Preference
            app:iconSpaceReserved="false"
            app:title="@string/main_pref_rate_app">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.axel_stein.date_timer" />

        </Preference>

        <Preference
            app:iconSpaceReserved="false"
            app:summary="@string/app_version"
            app:title="@string/main_pref_app_version_title"/>

    </PreferenceCategory>

</PreferenceScreen>