<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_timers">

    <fragment
        android:id="@+id/fragment_timers"
        android:name="com.axel_stein.date_timer.ui.timers.TimersFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_timers">
        <action
            android:id="@+id/action_add_timer"
            app:destination="@id/fragment_edit_timer">
            <argument
                android:name="id"
                android:defaultValue="0L"
                app:argType="long"/>
        </action>
        <action
            android:id="@+id/action_edit_timer"
            app:destination="@id/fragment_edit_timer" />
    </fragment>

    <fragment
        android:id="@+id/fragment_edit_timer"
        android:name="com.axel_stein.date_timer.ui.edit_timer.EditTimerFragment"
        android:label=""
        tools:layout="@layout/fragment_edit_timer">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/preferences_fragment"
        android:name="com.axel_stein.date_timer.ui.preferences.PreferencesFragment"
        android:label="@string/action_settings" >
        <action
            android:id="@+id/action_open_reminder_trouble"
            app:destination="@id/reminder_trouble_fragment" />
    </fragment>

    <action
        android:id="@+id/action_open_preferences"
        app:destination="@id/preferences_fragment" />

    <fragment
        android:id="@+id/reminder_trouble_fragment"
        android:name="com.axel_stein.date_timer.ui.preferences.ReminderTroubleFragment"
        android:label="@string/main_pref_reminder_trouble"
        tools:layout="@layout/fragment_reminder_trouble" />

</navigation>